force-app/main/default/objects/Company_House_Setting__c/Company_House_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Company House Setting</label>
</CustomObject>