force-app/main/default/objects/Company_House_Setting__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <label>Account Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>