force-app/main/default/objects/Company_House_Setting__c/fields/Auto_Update_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Auto_Update_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Update Contacts</label>
    <type>Checkbox</type>
</CustomField>