force-app/main/default/objects/Company_House_Setting__c/fields/Batch_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Batch_Occurrence__c</fullName>
    <label>Batch Occurrence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>