force-app/main/default/objects/Company_House_Setting__c/fields/Import_Resigned__c.field-meta.xml
<CustomField>
    <fullName>Import_Resigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Resigned</label>
    <type>Checkbox</type>
</CustomField>