force-app/main/default/objects/Company_House_Setting__c/fields/Permission_Profile_Ids__c.field-meta.xml
<CustomField>
    <fullName>Permission_Profile_Ids__c</fullName>
    <label>Permission Profile Ids</label>
    <type>TextArea</type>
</CustomField>